🐛 Fix GitHub Pages compatibility issues
- Fix service worker path for GitHub Pages subdirectory
- Replace deprecated apple-mobile-web-app-capable meta tag
- Improve PWA install banner logic and error handling
- Update manifest.json start_url for GitHub Pages
- Add better error handling for service worker registration

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "ACCA Agent - AI Study Companion",
   "short_name": "ACCA Agent",
   "description": "Your AI-powered study companion for ACCA qualifications. Get help with accounting standards, regulations, and exam preparation.",
-  "start_url": "/",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#0066cc",
   "theme_color": "#0066cc",
